[package]
name = "bootnode"
version.workspace = true
edition.workspace = true
license.workspace = true
description = ""

[dependencies]
ramd-db.workspace = true
ramd-tracing.workspace = true

eyre.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
libp2p = { workspace = true, features = ["tokio", "dns", "kad", "noise", "tcp", "yamux", "rsa", "macros", "identify"] }

[[bin]]
path = "src/main.rs"
name = "bootnode"