[package]
name = "ramd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = ""

[dependencies]
ramd-config.workspace = true
ramd-p2p-server.workspace = true
ramd-node.workspace = true
ramd-jsonrpc-server.workspace = true
ramd-db.workspace = true
ramd-tracing.workspace = true

clap = { workspace = true, features = ["derive"] }
dotenv.workspace = true
eyre.workspace = true
tokio.workspace = true
tracing.workspace = true

[[bin]]
path = "src/main.rs"
name = "ramd"
