[package]
name = "ramd-config"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
description = ""

[dependencies]
ramd-db.workspace = true
ramd-p2p-server.workspace = true
ramd-jsonrpc-server.workspace = true
ramd-tracing.workspace = true

eyre.workspace = true
serde.workspace = true
toml.workspace = true
