[package]
name = "ramd-node"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
description = ""

[dependencies]
ramd-config.workspace = true
ramd-db.workspace = true
ramd-processor.workspace = true

eyre.workspace = true
serde.workspace = true
tracing.workspace = true
