[package]
name = "ramd-jsonrpc"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
description = ""

[dependencies]
ramd-jsonrpc-api.workspace = true
ramd-jsonrpc-types.workspace = true
ramd-node.workspace = true

base64.workspace = true
async-trait.workspace = true
tokio.workspace = true
jsonrpsee.workspace = true
tracing.workspace = true
